--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "author": "pione30 <g.pionelish30@gmail.com>",
   "license": "UNLICENSED",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
