--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode 'development' --devtool 'eval-source-map'",
+    "dev": "webpack-dev-server --mode 'development' --devtool 'eval-source-map' --port 3000",
     "build": "webpack --mode 'production' --devtool 'source-map'",
     "typecheck": "tsc -p . --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
