--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
