--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
       "ES2020"
     ],
     "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
