--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development --devtool eval-source-map",
-    "build": "webpack --mode production --devtool source-map",
+    "build": "webpack --mode production",
     "typecheck": "tsc -p . --noEmit",
     "lint:prettier": "prettier --check src",
     "fix:prettier": "prettier --write src",
