--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "sourceMap": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
